fixed align

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body, html {
 }
 
 #demo {
-	width: 1000px;
 	height: 200px;
 	text-align: center;
 	margin: 100px auto;
@@ -19,7 +18,6 @@ body, html {
 }
 
 .description {
-	width: 1200px;
 	height: 200px;
 	text-align: center;
 	margin: 100px auto;
